# Sorei

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/astra/: .gitignore  CMakeLists.txt  binpack_loader.h  main.cu  model.h
examples/astra/sf_binpack/: rng.h  thread_safe_types.h  training_data_format.h
examples/astra/src/: binpack_loader.h  main.cu  model.h
examples/mnist/: CMakeLists.txt  dataloader.h  main.cu  model.h
examples/mnist/src/: dataloader.h  main.cu  model.h
sorei/: CMakeLists.txt
sorei/src/: misc.h  util.h
sorei/src/cublas/: cublas.cu  cublas.h
sorei/src/cuda/: ops.cu  ops.h  util.h  utils.h
sorei/src/cuda/cublas/: cublas.cu  cublas.h
sorei/src/cuda/elemwise/: binary.h  unary.h
sorei/src/cuda/set/: set.cu  set.h
sorei/src/matrix/: base.h  device.h  host.h  host_pinned.h  include.h  shape.h
sorei/src/nn/: include.h  lr_scheduler.h  model.h  network.h  tensor.h
sorei/src/nn/graph/: builder.cu  builder.h  graph.h  include.h  node.cu  node.h  optimizer.h
sorei/src/nn/layer/: affine.h  include.h  input.h  layer.h  param.h
sorei/src/nn/layer/affine/: affine.h  bwd.cu  fwd.cu
sorei/src/nn/layer/concat/: bwd.cu  concat.h  concat_bwd.cu  fwd.cu
sorei/src/nn/layer/elemwise/: common.h
sorei/src/nn/layer/mat_mul/: bwd.cu  fwd.cu  mat_mul.h  mat_mul_bwd.cu  mat_mul_fwd.cu
sorei/src/nn/layer/mean/: bwd.cu  fwd.cu  mean.h  mean_bwd.cu  mean_fwd.cu
sorei/src/nn/layer/pairwise_mul/: bwd.cu  fwd.cu  pairwise_mul.h  pairwise_mul_bwd.cu  pairwise_mul_fwd.cu
sorei/src/nn/layer/select/: bucket_index.h  bwd.cu  fwd.cu  select.h  select_bwd.cu  select_fwd.cu
sorei/src/nn/layer/softmax_cross_entropy/: bwd.cu  fwd.cu  softmax_cross_entropy.h  softmax_cross_entropy_bwd.cu  softmax_cross_entropy_fwd.cu
sorei/src/nn/lr_sched/: cosine_annealing.h  cosine_annealing_lr.h  exponential_lr.h  include.h  lr_scheduler.h  step_lr.h
sorei/src/nn/optim/: adam.cu  adam.h  include.h  optimizer.h
sorei/src/nn/optim/adamw/: adamw.h
sorei/src/rng/: rng.h
sorei/src/tensor/: array.h  matrix.h  shape.h
test/: CMakeLists.txt  framework.h  grad_check.h  test_lr_sched.h  test_tensor.h
test/src/: framework.h  grad_check.h  main.cu  test_grad.h  test_kernels.h  test_layers.h  test_lr_sched.h  test_matrix.h  test_model.h  test_optim.h  test_tensor.h
(+116 files in other folders)
